--- a/css/main.css
+++ b/css/main.css
@@ -305,13 +305,15 @@ footer h2 {
 
   .skip-to-main-content-link { position: absolute; left: -9999px; z-index: 999; padding: 1em; background-color: black; color: white; opacity: 0; } 
   .skip-to-main-content-link:focus { left: 50%; transform: translateX(-50%); opacity: 1; } 
-  
+
   button#load-more {
     margin-left: 4rem;
   }
   form {
     width: 100%;
   }
+
+  button:focus-visible { outline: 2px solid red; }
 
 form label {
     color: var(--headingcolor);
