--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,9 @@ a {
 .flex6 { flex: 6; }
 .column { flex-direction: column; }
 .justify-center { justify-content: center; }
+.text-end {
+    text-align: end;
+}
 .justify-between { justify-content: space-between; } 
 .justify-end { justify-content: flex-end; }
 .align-start { align-items: flex-start; }
@@ -313,6 +316,8 @@ footer h2 {
     width: 100%;
   }
 
+  .button:hover { background-color: var(--headingcolor); color: var(--lightbg)
+}
   .button:focus-visible { outline: 2px solid red; }
 
 form label {
