--- a/css/main.css
+++ b/css/main.css
@@ -191,6 +191,7 @@ input, select, textarea {
     padding: 1rem;
     min-height: 18rem;
 }
+
 .margtopbot { margin-top: 3rem; margin-bottom: 3rem; }
 
 .carousel svg {
@@ -326,6 +327,10 @@ form label {
     margin-bottom: 0.25rem;
     font-size: 1.2rem;
 }
+.grid a {
+    text-decoration: none;
+}
+
 
 @media (width < 1020px) {
     .mob-col {
