--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@ form label {
     margin-bottom: 0.25rem;
     font-size: 1.2rem;
 }
-.grid a {
+.grid a, #hero-featured a, #recentcarousel a {
     text-decoration: none;
 }
 
